; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/ntdll/extr_rtl.c_test_RtlUlonglongByteSwap.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/ntdll/extr_rtl.c_test_RtlUlonglongByteSwap.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [38 x i8] c"Broken RtlUlonglongByteSwap in win2k\0A\00", align 1
@.str.1 = private unnamed_addr constant [84 x i8] c"RtlUlonglongByteSwap(0x7654321087654321) returns 0x%s, expected 0x2143658710325476\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @test_RtlUlonglongByteSwap to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_RtlUlonglongByteSwap() #0 {
  %1 = alloca i32, align 4
  %2 = call i64 @pRtlUlonglongByteSwap(i32 0)
  %3 = icmp ne i64 %2, 0
  br i1 %3, label %4, label %6

4:                                                ; preds = %0
  %5 = call i32 @win_skip(i8* getelementptr inbounds ([38 x i8], [38 x i8]* @.str, i64 0, i64 0))
  br label %15

6:                                                ; preds = %0
  %7 = call i64 @pRtlUlonglongByteSwap(i32 -1)
  %8 = trunc i64 %7 to i32
  store i32 %8, i32* %1, align 4
  %9 = load i32, i32* %1, align 4
  %10 = icmp eq i32 -1, %9
  %11 = zext i1 %10 to i32
  %12 = load i32, i32* %1, align 4
  %13 = call i32 @wine_dbgstr_longlong(i32 %12)
  %14 = call i32 @ok(i32 %11, i8* getelementptr inbounds ([84 x i8], [84 x i8]* @.str.1, i64 0, i64 0), i32 %13)
  br label %15

15:                                               ; preds = %6, %4
  ret void
}

declare dso_local i64 @pRtlUlonglongByteSwap(i32) #1

declare dso_local i32 @win_skip(i8*) #1

declare dso_local i32 @ok(i32, i8*, i32) #1

declare dso_local i32 @wine_dbgstr_longlong(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
